(config): all all origins for testing