@@ -28,16 +28,17 @@ public class CorsConfig {
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration config = new CorsConfiguration();
-        config.setAllowedOrigins(
-                List.of(
-                        "http://localhost:5173",
-                        "https://desk-nova-gamma.vercel.app",
-                        "https://lucky-perception-production-d1b1.up.railway.app"
-                )
-        );
+//        config.setAllowedOrigins(
+//                List.of(
+//                        "http://localhost:5173",
+//                        "https://desk-nova-gamma.vercel.app",
+//                        "https://lucky-perception-production-d1b1.up.railway.app"
+//                )
+//        );
+        config.setAllowedOriginPatterns(Arrays.asList("*"));
         config.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         config.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin"));
-        // config.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
+        config.setExposedHeaders(Arrays.asList("Authorization", "Content-Type"));
         config.setAllowCredentials(true);
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
